Details and MotionLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
-    <string name="notification_button">See changes</string>
+    <string name="notification_button">Check the status</string>
 
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
@@ -24,6 +24,17 @@
     <string name="retrofit_info">Retrofit (by Square, Inc) is a type-safe HTTP client for Android and Java</string>
     <string name="retrofit_url">https://github.com/square/retrofit/archive/refs/heads/master.zip</string>
     <string name="desc_image_of_a_cloud_with_a_down_arrow">Image of a cloud with a down arrow</string>
+    <string name="no_option_selected_toast_message">Please, select one option to be downloaded</string>
+    <string name="channel_name">Download feedback</string>
+    <string name="channel_description">Be aware as soon your download finish!</string>
+
+    <!-- Details -->
+    <string name="filename_label">File name</string>
+    <string name="status_label">Status</string>
+    <string name="ok_button">Ok</string>
+    <string name="download_success">Success</string>
+    <string name="download_failed">Failed</string>
+    <string name="no_filename_defined">No filename was defined</string>
 
 
 </resources>
